--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Datos desde XLSX</h2>
+        <button id="exportar-stock-xlsx">Exportar a Excel</button>
         <table id="tabla-datos">
           <!-- Aquí se mostrarán los datos -->
         </table>
