--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
     <br>
     <br>
     <div id="compra_actual">
-      <div id="vendido-actual">Total: $0.00</div>
+      <div id="vendido-actual">Compra actual: $0.00</div>
       <br>
-      <button id="finalizar-compra" onclick="finalizar_compra()">Finalizar Compra</button>
-      <button id="borrar-compra">Cancelar Compra</button>
+      <div id="botones-compra-actual">
+        <button id="finalizar-compra" onclick="finalizar_compra()">Finalizar Compra</button>
+        <button id="borrar-compra">Cancelar Compra</button>
+      </div>
+    
 
     </div>
     
