primera parte lista

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="contenido">
 
 
-    <div id="compra_actual">
+    <div id="menu">
 
       <!-- Botón para abrir el modal -->
       <button id="btnMostrarModal">Mostrar Stock Disponible</button>
@@ -97,7 +97,7 @@
     <div id="compra_actual">
 
       <table id="tabla-productos">
-        <tr>
+        <tr >
           <th>ID</th>
           <th>Producto</th>
           <th>Precio</th>
@@ -135,7 +135,7 @@
       <table id="historial-table">
 
         <thead>
-          <tr>
+          <tr  >
             <th>ID</th>
             <th>Producto</th>
             <th>Precio</th>
