--- a/crear_lista_stock.html
+++ b/crear_lista_stock.html
@@ -81,7 +81,7 @@
 
         </div>
         <div class="copyright">
-            © 2023 Desarrollado por DEA. Derechos reservados.
+            © 2023 Desarrollado por SystEma. Derechos reservados.
           </div>
         
 
