--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html>
-
-  <head>
+<html lang="es">
+<head>
+ 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adminstración de Productos</title>
     <link rel="stylesheet" href="estilo.css">
-
-
-
-
-
-</html>
 
 </head>
 
@@ -153,7 +147,7 @@
 
   </div>
   <div class="copyright">
-    © 2023 Desarrollado por DEA. Derechos reservados.
+    © 2023 Desarrollado por SystEma. Derechos reservados.
   </div>
 
 
@@ -166,3 +160,6 @@
   <script src="CONTROL.js"></script>
 
 </body>
+
+
+</html>
