mas mejoras en la funcionalidad

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <h1>Productos</h1>
 
+        <button type="button" onclick="refrescarPagina()">Limpiar campos</button>
 
         <label for="nombre">Nombre del Producto:</label>
         <input type="text" id="nombre" list="opciones-productos" required>
