--- a/crear_lista_stock.html
+++ b/crear_lista_stock.html
@@ -49,7 +49,7 @@
             <button id="boton-vaciar">Limpiar todo</button>
             <button id="boton-incrementar-precio">Aumentar Precio</button>
             <button id="boton-incrementar-porcentaje-precio">Aumentar Precio en Porcentaje</button>
-        <!--     <button id="boton-redondear-precios">Redondear Precios</button>-->
+            <button id="boton-redondear-precios">Redondear Precios</button>
         </div>
         <div id="busqueda">
             <label for="busqueda">Buscar por Nombre o Stock:</label>
@@ -66,7 +66,7 @@
 
         </div>
 
-        <div id="compra_actual">
+        <div id="bloque-historial">
 
             <table id="tabla-productos">
                 <thead>
