arreglo de diseño

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 
     <div id="bloque-carrito">
       <div id="compra_actual">
-        <div id="vendido-actual">Total: $0.00</div>
+        <div id="vendido-actual">Total: $0.00
+          
+        </div>
         <br>
         <div id="botones-compra-actual">
           <button id="finalizar-compra" onclick="finalizar_compra()">Finalizar Compra</button>
@@ -109,6 +111,8 @@
         </table>
       </div>
     </div>
+
+
     <div id="historial">
 
 
