--- a/crear_lista_stock.html
+++ b/crear_lista_stock.html
@@ -66,20 +66,14 @@
 
         </div>
 
-        <div id="bloque-historial">
+        <div id="bloque-productos">
 
-            <table id="tabla-productos">
-                <thead>
-                    <tr>
-
-                    </tr>
-                </thead>
-                <tbody></tbody>
+            <table id="tabla-datos">
+              
             </table>
         </div>
     </div>
 
-        </div>
         <div class="copyright">
             © 2023 Desarrollado por SystEma. Derechos reservados.
           </div>
