--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
               <br>
               <label for="categoria">Categoría:</label>
               <input type="text" id="categoria" required>
+              <p id="miParrafo" style="display: none; color: rgb(84, 168, 0);"></p>
+
               <br>
               <button id="agregarBtn">Agregar Producto</button>
             </div>
@@ -104,8 +106,7 @@
               <button id="boton-redondear-precios">Redondear Precios</button>
             </div>
             <div id="busqueda">
-              <label for="busqueda">Buscar por Nombre o Stock:</label>
-              <input type="text" id="busqueda" placeholder="Nombre o Stock">
+              <input type="text" id="buscando" placeholder="Buscar por nombre o stock o categoría">
 
 
               <button id="boton-buscar">Buscar</button>
