mejoras en las funciones

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
               <input type="text" id="nombr" required>
               <br>
               <label for="precio">Precio:</label>
-              <input type="number" id="preci" required>
+              <input type="number" id="preci" >
               <br>
               <label for="stock">Stock:</label>
-              <input type="number" id="st" required>
+              <input type="number" id="st" >
               <br>
               <label for="categoria">Categoría:</label>
               <input type="text" id="categoria" required>
