mejoras en guardar pagos

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 
         <h2>Historial de Compras</h2>
         <div id="opciones-historial">
-          <button onclick="limpiarHistorial()">Vaciar Historial</button>
+          <button onclick="limpiarHistorial()">Vaciar Historial y Pagos</button>
           <button id="exportar-xlsx">Exportar a Excel</button>
+          <button onclick="exportarExcelPagos()">Exportar a Excel PAGOS</button>
+
         </div>
 
 
