mejoras en el diseño

--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
             </p>
             <p>            Total por QR: <span id="totalQR"></span>
             </p>
-            <p>            Total con tarjeta de débito: <span id="totalDebito"></span>
+            <p>            Total con Tarjeta de Débito: <span id="totalDebito"></span>
             </p>
-            <p>            Total con tarjeta de crédito: <span id="totalCredito"></span>
+            <p>            Total con Tarjeta de Crédito: <span id="totalCredito"></span>
             </p>
           </div>
           
