--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
 
           <h2>Detalles de Pagos</h2>
           <div id="tipos_pagos"> 
+            <p>            Total: <span id="totalGeneral"></span>
+            </p>
             <p>            Total en Efectivo: <span id="totalEfectivo"></span>
             </p>
             <p>            Total por Transferencia: <span id="totalTransferencia"></span>
